--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,42 +8,32 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icons/fman72x72.png",
+      "src": "/icons/maskable_icon_x72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "/icons/fman96x96.png",
+      "src": "/icons/maskable_icon_x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "/icons/fman128x128.png",
+      "src": "/icons/maskable_icon_x128.png",
       "type": "image/png",
       "sizes": "128x128"
     },
     {
-      "src": "/icons/fman144x144.png",
-      "type": "image/png",
-      "sizes": "144x144"
-    },
-    {
-      "src": "/icons/fman152x152.png",
-      "type": "image/png",
-      "sizes": "152x152"
-    },
-    {
-      "src": "/icons/fman192x192.png",
+      "src": "/icons/maskable_icon_x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/icons/fman384x384.png",
+      "src": "/icons/maskable_icon_x384.png",
       "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "/icons/fman512x512.png",
+      "src": "/icons/maskable_icon_x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
